correct another bug on mobile

--- a/timeline/style.css
+++ b/timeline/style.css
@@ -34,6 +34,8 @@
 	background: #222;
 	display: flex; 
 	justify-content: center;
+	border-top-left-radius: inherit;
+	border-top-right-radius: inherit;
 }
 
 .darkbox img {
